--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/MasterJames1z/ProjectFront#readme",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3"
   },
