--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
 services:
   project:
-    image: worawut111/projectDevop:latest
+    image: worawut111/projectdevop:latest
     ports:
       - "8185:3000"
